--- a/script.tex
+++ b/script.tex
@@ -269,12 +269,12 @@ U:\mathcal{H}_1\rightarrow \mathcal{H}_2 \text{ s.t. } U\pi_1(A)=\pi_2(A)U\quad 
 Now given a $\pi$ on $\mathcal{H}$ and any normalized vector $\xi\in\mathcal{H}$, then the map \begin{align}
 \omega_{\xi}:\mathcal{A}&\longrightarrow \mathbb{C}\qquad \omega_{\xi}(A)=\langle\xi,\pi(A)\xi\rangle \; ,
 \end{align}
-defines a state on the algebra. Given a state $\omega$ on $\mathcal{A}$, there exists a $\mathcal{H}_\omega$, a representation $\pi_{\omega}:\mathcal{A}\rightarrow \mathcal{H}_\omega$ and a normalized $\Omega_{\omega}\in\mathcal{H}\omega$ such that \begin{align}
+defines a state on the algebra. Given a state $\omega$ on $\mathcal{A}$, there exists a $\mathcal{H}_{\omega}$, a representation $\pi_{\omega}:\mathcal{A}\rightarrow \mathcal{H}_{\omega}$ and a normalized $\Omega_{\omega}\in\mathcal{H}_ra{\omega}$ such that \begin{align}
 \omega(A)=\langle\Omega_{\omega},\pi_{\omega}(A)\Omega_{\omega}\rangle \quad \text{''GNS construction''.}
 \end{align}
 We will be mainly using two topologies \begin{enumerate}
-	\item In $A$: $A_n\rightarrow A$ if $\|A_n-A\|\rightarrow 0$. 
-	\item In a representation where $A$ is represented as $\mathcal{L}(\mathcal{H})$ there: uniform convergence, strong convergence, weak convergence apply as usual, outside of representations, these terms do not make sense.
+	\item In $\mathcal{A}$: $A_n\rightarrow A$ if $\|A_n-A\|\rightarrow 0$. 
+	\item In a representation where $\mathcal{A}$ is represented as $\mathcal{L}(\mathcal{H})$ there: uniform convergence, strong convergence, weak convergence apply as usual, outside of representations, these terms do not make sense.
 \end{enumerate}
 \begin{remarks}
 	On the set of states over $\mathcal{A}$, designated by $\varepsilon(\mathcal{A})$, one has \begin{itemize}
@@ -400,6 +400,8 @@ whereby the hashtag is a placeholder for nothing or dagger.
 	&=-\omega_{\beta,\mu}(a^*(ze^{-\beta H}\tilde{\varphi})a(\psi))\langle \psi, ze^{-\beta H}\tilde{\varphi}\rangle\\
 	\Rightarrow \omega_{\beta,\mu}(a^*((\mathds{1}+ze^{-\beta H})\tilde{\varphi})a(\psi))&=\langle \psi, ze^{-\beta H} \tilde{\varphi}\rangle\; ,
 	\end{align}
+	!!! Recalculate this thing above here, why are there so many tildes??!!!
+	
 	and hence the first term of the claim, since $ze^{-\beta H}>0$ implies that $(\mathds{1}+ze^{-\beta H})$ is invertible.\\
 	If $\psi$ is such that $\mathcal{N}\psi= N\psi$ (i.e. fixed particle number) then \begin{align}
 	\langle \psi,e^{-\beta K_{\mu}}b(\varphi)\psi\rangle &={N}^{-1}\langle \psi , e^{-\beta K_{\mu}}(\mathcal{N}+1)b(\varphi)\psi\rangle\\
@@ -408,11 +410,12 @@ whereby the hashtag is a placeholder for nothing or dagger.
 	\Rightarrow \langle \psi,e^{-\beta K_{\mu}}\psi\rangle&=0\; .
 	\end{align}
 	Computing $\mathrm{Tr}(e^{-\beta K_{\mu}}b(\varphi))$ in a basis of such vectors proves the claim. Now: By a similar argument \begin{align}
-	\omega_{\beta,\mu}(a^*(\varphi_1)\cdots a^{*}(\varphi_n)a(\psi_m)\cdots a(\psi_1))=\delta_{n,m}\det\left(\{\langle\psi_i,\varrho\psi_j\rangle\}_{i,j=1}^{n}\right)\; ,	\end{align}$\text{where }\varrho = Ze^{-\beta H}(\mathds{1}+Ze^{-\beta H})^{-1}$.
+	\omega_{\beta,\mu}(a^*(\varphi_1)\cdots a^{*}(\varphi_n)a(\psi_m)\cdots a(\psi_1))=\delta_{n,m}\det\left(\{\langle\psi_i,\varrho\varphi_j\rangle\}_{i,j=1}^{n}\right)\; ,	\end{align}
+$\text{where }\varrho = ze^{-\beta H}(\mathds{1}+ze^{-\beta H})^{-1}$.
 \end{proof}
 \end{example}
 \begin{remarks}
-	The \textit{2n-point function} is expressed in terms of the 2-point function $\langle \psi, Ze^{-\beta H}(\mathds{1}+Ze^{-\beta H})^{-1}\varphi\rangle$ called \textit{Gaussian state} or \textit{quasi-free state}.
+	The \textit{2n-point function} is expressed in terms of the 2-point function $\langle \psi, ze^{-\beta H}(\mathds{1}+ze^{-\beta H})^{-1}\varphi\rangle$ called \textit{Gaussian state} or \textit{quasi-free state}.
 \end{remarks}
 \begin{remarks}
 	The crucial property used in this calculation, expressed in Eq. \eqref{eqn::hashtag_dat_shit}, is the so called \textit{KMS condition}: \begin{align}
@@ -423,19 +426,19 @@ whereby the hashtag is a placeholder for nothing or dagger.
 The next question is how one takes the TDL, which means here that $\mathcal{H}\rightarrow L^2(\mathbb{R}^d)$, then one has to take the limit of the operators \begin{align}
 (H\psi)(x)=(-\Delta \psi)(x)=(2\pi)^{-d/2}\int |\xi|^2\hat{\psi}(\xi)e^{i\xi\cdot x}\mathrm{d}\xi\; .
 \end{align}
-How can one evaluate this? The dynamics on $CAR(\mathcal{H})$ are given by $\tau_t(a^{\#}(\varphi))=a^{\#}(e^{-itH}\varphi)$. As per usual, one takes the well understood finite case $f(-\Delta_L)$ which converges to $f(-\Delta)$ strongly for any bounded, continuous function f. This applies to $e^{-itx}$, $e^{-\beta x}$, $Ze^{-\beta x}(1+Ze^{-\beta x})^{-1} (\text{for }x>0)$.
+How can one evaluate this? The dynamics on $CAR(\mathcal{H})$ are given by $\tau_t(a^{\#}(\varphi))=a^{\#}(e^{-itH}\varphi)$. As per usual, one takes the well understood finite case $f(-\Delta_L)$ which converges to $f(-\Delta)$ strongly for any bounded, continuous function f. This applies to $e^{-itx}$, $e^{-\beta x}$, $ze^{-\beta x}(1+ze^{-\beta x})^{-1} (\text{for }x>0)$.
 \begin{theorem}
-	Let $\omega_{\beta,\mu}^2$ be the Gibbs state associated to $H_L=-\Delta_L$ on $CAR(\mathcal{H}_L)$. Then \begin{align*}
+	Let $\omega_{\beta,\mu}^L$ be the Gibbs state associated to $H_L=-\Delta_L$ on $CAR(\mathcal{H}_L)$. Then \begin{align*}
 	\omega_{\beta,\mu}^L(A)\overset{}{\longrightarrow}\omega_{\beta,\mu}(A) \qquad (L\rightarrow \infty)\; ,
 	\end{align*}
 	for any $A\in CAR(\mathcal{H}_{L})$ and any $L$, where $\omega_{\beta,\mu}$ is the quasi-free state over $CAR(\mathcal{H})$ with the two-point function \begin{align}
-		\omega_{\beta,\mu}(a^*(\varphi)a(\psi))=(2\pi)^{-d/2}\int\overline{\hat{\psi}(\xi)}\frac{Ze^{-\beta |\xi|^2}}{1+Ze^{-\beta|\xi|^2}}\hat{\varphi}(\xi)\mathrm{d}\xi\; .
+		\omega_{\beta,\mu}(a^*(\varphi)a(\psi))=(2\pi)^{-d/2}\int\overline{\hat{\psi}(\xi)}\frac{ze^{-\beta |\xi|^2}}{1+ze^{-\beta|\xi|^2}}\hat{\varphi}(\xi)\mathrm{d}\xi\; .
 	\end{align}
 \end{theorem}
 \begin{proof}
 We can limit ourselves to $\varphi,\psi\in C_c^{\infty}(\mathbb{R}^d)$, since $\mathrm{CAR}(C_C^{\infty})$ is equal to $\mathrm{CAR}(L^2(\mathbb{R}^d))$ as $C_c^{\infty}(\mathbb{R^d})$ is dense in $L^2(\mathbb{R}^d)$.
 	It suffices to prove the statement for the two-point function, due to the above Proposition. But this follows from the weak convergence of \begin{align}
-	Ze^{-\beta(-\Delta_L)}(\mathds{1}+Ze^{-\beta(-\Delta_L)})\overset{w}{\longrightarrow}Ze^{-\beta(-\Delta)}\left(\mathds{1}+Ze^{-\beta(-\Delta)}\right)^{-1}\; ,
+	ze^{-\beta(-\Delta_L)}(\mathds{1}+ze^{-\beta(-\Delta_L)})\overset{w}{\longrightarrow}ze^{-\beta(-\Delta)}\left(\mathds{1}+ze^{-\beta(-\Delta)}\right)^{-1}\; ,
 	\end{align}
 	for a proof refer to exercise sheet 1.
 \end{proof}
@@ -444,10 +447,10 @@ We can limit ourselves to $\varphi,\psi\in C_c^{\infty}(\mathbb{R}^d)$, since $\
 		 \item Given $\beta,\mu$, the limit of $\omega_{\beta,\mu}^L$ exists and it is unique and $\omega_{\beta,\mu}$ defines the thermal equilibrium state on $CAR(L^2(\mathbb{R}^d))$.
 		 \item Density of the free Fermi gas \begin{align}
 		 \varrho(\beta,\mu)&=\lim_{L\rightarrow\infty}L^{-d}\sum_{n\geq 1} \omega_{\beta,\mu}^L(\underbrace{a^{\dagger}(\psi_n)a(\psi_n)}_{\mathcal{N}})\\
-		 &=(2\pi)^{d/2}\int \frac{Ze^{-\beta}|\xi|^2}{1+Ze^{-\beta|\xi|^2}}\mathrm{d}\xi\; ,
+		 &=(2\pi)^{d/2}\int \frac{ze^{-\beta}|\xi|^2}{1+ze^{-\beta|\xi|^2}}\mathrm{d}\xi\; ,
 		 \end{align}
 		 where $(\psi_n)_{n\in\mathcal{N}}$ is any basis of $L^2(\Lambda_L)$. This means that the momentum density distribution of the Fermi-gas is given by\begin{align}
-		 0\leq \frac{Ze^{-\beta|\xi|^2}}{1+Ze^{-\beta|\xi|^2}}\leq 1\; ,
+		 0\leq \frac{ze^{-\beta|\xi|^2}}{1+ze^{-\beta|\xi|^2}}\leq 1\; ,
 		 \end{align}
 		 and its limit as $\beta\rightarrow\infty$ (i.e. $T\rightarrow 0$) \begin{align}
 		 \lim_{\beta\rightarrow \infty}\frac{1}{1+e^{\beta(|\xi|^2-\mu)}}=\begin{cases}
@@ -459,7 +462,7 @@ We can limit ourselves to $\varphi,\psi\in C_c^{\infty}(\mathbb{R}^d)$, since $\
 		 	\includegraphics[scale=1]{fermidirac.pdf}
 		 	\caption{Fermi-Dirac distribution [stolen; By Krishnavedala - Own work, CC BY-SA 3.0, \texttt{https://commons.wikimedia.org/w/index.php?curid=15478733}]\label{fermidirac}.}
 		 \end{figure}
-	 \item $\omega_{\beta,\mu}$ having finite density with infinite number of particles cannot be given by a vector or density matrix in $\mathcal{F}_a(L^2(\mathbb{R}^d))$. There is the famous Araki-Wyss representation associated to $\omega_{\beta,\mu}$, namely to $\varrho=\frac{Ze^{-\beta H}}{\mathds{1}+Ze^{-\beta H}}$. \begin{align}
+	 \item $\omega_{\beta,\mu}$ having finite density with infinite number of particles cannot be given by a vector or density matrix in $\mathcal{F}_a(L^2(\mathbb{R}^d))$. There is the famous Araki-Wyss representation associated to $\omega_{\beta,\mu}$, namely to $\varrho=\frac{ze^{-\beta H}}{\mathds{1}+ze^{-\beta H}}$. \begin{align}
 	 H_{\varrho}=\mathcal{F}_a (\mathcal{H}) \otimes \mathcal{F}_a(\mathcal{H}) \qquad \Omega_{\varrho}=\Omega\otimes\Omega \\
 	 \pi(a^*(\varphi))=b^*(\sqrt{1-\varrho}\varphi)\otimes \mathds{1}+(-\mathds{1})^{\mathcal{N}}\otimes b(\sqrt{\varrho}\varphi)\; .
 	 \end{align}
@@ -1149,15 +1152,15 @@ Dynamics are given by interactions which corresponds to the following kind of ma
 x &\longmapsto \Phi(x)=\Phi(x)\subset \mathcal{A}_x\; ,
 \end{align}
 Whereby $\phi(x)$ is an interaction between spins living in x. And define the Hamiltonian as \begin{align}
-H_{\Lambda}=\sum_{x\subset\Lambda}\phi(x)\; .
+H_{\Lambda}=\sum_{x\subset\Lambda}\Phi(x)\; .
 \end{align}
-A typical example of this is a two-body interaction $\phi(x)=0$ if $(x)\neq 2$. Dynamics (in finite volume $\Lambda\in\mathcal{F}(\Gamma)$) are then given by \begin{align}
+A typical example of this is a two-body interaction $\Phi(x)=0$ if $|x|\neq 2$. Dynamics (in finite volume $\Lambda\in\mathcal{F}(\Gamma)$) are then given by \begin{align}
 \tau_t^{\Lambda}(A)=e^{itH_{\Lambda}}Ae^{-itH_{\Lambda}}\; ,
 \end{align}
 has a well defined limit as $\Lambda\rightarrow\Gamma$, i.e. there exist dynamics $\tau_t$ on $\mathcal{A}$ such that \begin{align}
 \|\tau_t^{\Lambda}(A)-\tau_t(A)\|\rightarrow 0\; ,
 \end{align}
-as $\Lambda\rightarrow \Gamma$ under sufficient decay assumptions on $\|\phi(x)\|$ as diameter $\mathrm{diam}(x)$ grows. Ther \underline{Mermin-Wagner theorem} now states that the absence of continuous symmetry breaking in $\nu=1,2$. Here consider the same Hamiltonian on all sites $\mathcal{H}_x=\mathcal{H}$ for all $x\in\Gamma$. And consider furthermore a continuous symmetry given by a compact connected Lie group $G$ (e.g. $SU(2)$). Assume there exists the following unitary representation of $G$ on $\mathcal{H}$ given by \begin{align}
+as $\Lambda\rightarrow \Gamma$ under sufficient decay assumptions on $\|\phi(x)\|$ as diameter $\mathrm{diam}(x)$ grows. The \underline{Mermin-Wagner theorem} now states that the absence of continuous symmetry breaking in $\nu=1,2$. Here consider the same Hamiltonian on all sites $\mathcal{H}_x=\mathcal{H}$ for all $x\in\Gamma$. And consider furthermore a continuous symmetry given by a compact connected Lie group $G$ (e.g. $SU(2)$). Assume there exists the following unitary representation of $G$ on $\mathcal{H}$ given by \begin{align}
 U:G&\longrightarrow \mathcal{L}(\mathcal{H}) \\
 g&\longmapsto U_g\; .
 \end{align}
@@ -1200,7 +1203,7 @@ If $A\in\mathcal{A}_X$ for $X\in\mathcal{F}(\mathbb{Z}^2)$ then \begin{align}
 \end{align}
 so that \begin{align} U_{\phi}(m)^*\delta(U_{\phi}(m))&=i\sum_{\mathclap{\{x,y\}\in\mathbb{Z}^2\setminus \mathcal{N}_{m}}} U_{\phi}^*(m)\phi(x,y)U_{\phi}(m)-\phi(x,y)\quad \text{with}\\\mathcal{N}_m &:=\{\{x,y\}: x,y\in\Lambda_m \lor x,y\in\mathbb{Z}^2\setminus\Lambda_{2m}\} \;.
 \end{align}
-Sinc efor all $\{x,y\}\in\mathcal{N}_m$ rotations happen around the same angle and the involved operators commute, i.e. \begin{align}
+Since for all $\{x,y\}\in\mathcal{N}_m$ rotations happen around the same angle and the involved operators commute, i.e. \begin{align}
 U_m(\phi)^*\phi(x,y)U_m(\phi)=\alpha_{\phi}(\phi(x,y))=\phi(x,y)\;.
 \end{align}
 With the action on $x$ defined as $S_x$ one can write \begin{align}
@@ -1240,7 +1243,7 @@ Whereby bounds of the following form are proven \begin{align}
 where $E(\xi)\sim |\xi|^2$ as $|\xi|\rightarrow 0$ if $\nu\geq 3$, the integral is convergent giving \begin{align}
 \liminf \frac{1}{|\Lambda|}\sum(-1)^{|x|}\omega_{\beta,1}(S_0^3S_x^3)\geq \chi - \frac{\tilde{C}}{\beta}> 0\ ;, 
 \end{align} 
-if $\beta^{-1}$ is small enough. This implies long range order, i.e. \begin{align}\lim_{|x|\rightarrow\infty}\liminf_{|\Lambda|\rightarrow\infty} (-1)^{|x|}\omega_{\beta,\Lambda}(S_0^3S_x^3)>0\end{align}whenever $\nu\geq 3$ and $\beta^{-1}$ is smlal enough. This implies that the limiting states cannot be invariant under rotation. The key element of this proof really is the infrared bounds. Let $C_{\Lambda}(x)=(-1)^{|x|}\omega_{\beta,\Lambda}(S_0^3S_x^3)$ then the finiteness of the following was the clue to the proof \begin{align}
+if $\beta^{-1}$ is small enough. One finds long range order, i.e. \begin{align}\lim_{|x|\rightarrow\infty}\liminf_{|\Lambda|\rightarrow\infty} (-1)^{|x|}\omega_{\beta,\Lambda}(S_0^3S_x^3)>0\end{align}whenever $\nu\geq 3$ and $\beta^{-1}$ is small enough. This implies that the limiting states cannot be invariant under rotation. The key element of this proof really is the infrared bounds. Let $C_{\Lambda}(x)=(-1)^{|x|}\omega_{\beta,\Lambda}(S_0^3S_x^3)$ then the finiteness of the following was the clue to the proof \begin{align}
 \frac{1}{|\Lambda|}\sum (-1)^{|x|}\omega_{\beta,\Lambda}(S_0^3S_x^3)=\hat{C}_1(0)=C_1(0)-\sum_{\xi\in\Lambda^*\setminus\{0\}}\hat{C}_{\Lambda}(\xi)\; ,
 \end{align}
 so one needs to control the amplitude of the small $\xi$ component of the correlation function.
